--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
     <!DOCTYPE html>
 <html lang="en">
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	
-</head>
 
 <body>
 	<div class="container">
@@ -24,10 +19,16 @@
 	<h1>have a beautiful vision!</h1>
 	<nav>
 		<h2>Specscart</h2>
+
+		
+		
+	   
 		<div class="close">
 			<div></div>
 		</div>
+		
 		<ul>
+			<li><a href="loginpage.html">Login Now!</a></li>
 			<li><a href="#">Home</a></li>
 			<li><a href="#">About</a></li>
 			<li><a href="#">Bestsellers!</a></li>
